// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavBar Component renders with menu, and utilities 1`] = `
<div>
  <nav
    class="gds-nav-bar-container noselect"
  >
    <a
      class="nav-bar-brand"
      href="redirection"
    >
      partial url
      <img
        alt="alt"
        class="nav-bar-brand-image"
        src="logoSource"
      />
    </a>
    <div
      class="nav-bar-items-container"
    >
      <div
        class="nav-bar-items-group"
      >
        <div
          class="nav-bar-menu-item"
        >
          <div
            class="nav-bar-menu-label"
          >
            button
          </div>
        </div>
      </div>
      <div />
      <div
        class="nav-bar-items-group"
      >
        <div
          class="nav-bar-menu-item"
        >
          <i
            class="icon"
            icon="fal,icons"
          />
          <div
            class="nav-bar-menu-label"
          >
            button
          </div>
        </div>
      </div>
    </div>
  </nav>
</div>
`;

exports[`NavBar Component renders without menu nor utilities 1`] = `
<div>
  <nav
    class="gds-nav-bar-container noselect"
  >
    <a
      class="nav-bar-brand"
      href="redirection"
    >
      partial url
      <img
        alt="alt"
        class="nav-bar-brand-image"
        src="logoSource"
      />
    </a>
    <div
      class="nav-bar-items-container"
    />
  </nav>
</div>
`;
